Added standard linting configuration

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,4 +17,7 @@ strip = true     # Automatically strip symbols from the binary
 opt-level = 3    # Maximum optimisation (this is the cargo default)
 lto = "thin"     # Enable link-time optimisation (fast)
 
+[features]
+reasons = []
+
 [dependencies]
