--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,12 @@ lto = "thin"     # Enable link-time optimisation (fast)
 reasons = []
 
 [dependencies]
+
+[dev-dependencies]
+axum = "0.6.20"
+bytes = "1.5.0"
+reqwest = "0.11.24"
+tokio = { version = "1.36.0", features = ["io-std", "macros", "rt-multi-thread"] }
+tower-http = { version = "0.4.4", features = ["trace"] }
+tracing = "0.1.40"
+tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
