--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,12 +21,19 @@ lto = "thin"     # Enable link-time optimisation (fast)
 reasons = []
 
 [dependencies]
+axum = "0.6.20"
+hex = "0.4.3"
+semver = { version = "1.0.21", features = ["serde"] }
+serde_json = "1.0.113"
 
 [dev-dependencies]
-axum = "0.6.20"
+assert-json-diff = "2.0.2"
 bytes = "1.5.0"
 reqwest = "0.11.24"
+rubedo = "0.4.6"
+sha2 = "0.10.8"
 tokio = { version = "1.36.0", features = ["io-std", "macros", "rt-multi-thread"] }
 tower-http = { version = "0.4.4", features = ["trace"] }
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
+velcro = "0.5.4"
