--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,13 +25,15 @@ axum = "0.6.20"
 hex = "0.4.3"
 semver = { version = "1.0.21", features = ["serde"] }
 serde_json = "1.0.113"
+sha2 = "0.10.8"
 
 [dev-dependencies]
 assert-json-diff = "2.0.2"
 bytes = "1.5.0"
+claims = "0.7.1"
 reqwest = "0.11.24"
 rubedo = "0.4.6"
-sha2 = "0.10.8"
+tempfile = "3.10.0"
 tokio = { version = "1.36.0", features = ["io-std", "macros", "rt-multi-thread"] }
 tower-http = { version = "0.4.4", features = ["trace"] }
 tracing = "0.1.40"
