--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,9 @@ reasons = []
 
 [dependencies]
 axum = "0.6.20"
+ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
 hex = "0.4.3"
+rubedo = "0.4.6"
 semver = { version = "1.0.21", features = ["serde"] }
 serde_json = "1.0.113"
 sha2 = "0.10.8"
@@ -31,8 +33,8 @@ sha2 = "0.10.8"
 assert-json-diff = "2.0.2"
 bytes = "1.5.0"
 claims = "0.7.1"
+rand = "0.8.5"
 reqwest = "0.11.24"
-rubedo = "0.4.6"
 tempfile = "3.10.0"
 tokio = { version = "1.36.0", features = ["io-std", "macros", "rt-multi-thread"] }
 tower-http = { version = "0.4.4", features = ["trace"] }
