--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,9 @@ rubedo = "0.4.6"
 semver = { version = "1.0.21", features = ["serde"] }
 serde_json = "1.0.113"
 sha2 = "0.10.8"
+tokio = { version = "1.36.0", features = ["fs", "io-std", "io-util"] }
+tokio-util = { version = "0.7.10", features = ["io", "io-util"] }
+tracing = "0.1.40"
 
 [dev-dependencies]
 assert-json-diff = "2.0.2"
@@ -38,6 +41,5 @@ reqwest = "0.11.24"
 tempfile = "3.10.0"
 tokio = { version = "1.36.0", features = ["io-std", "macros", "rt-multi-thread"] }
 tower-http = { version = "0.4.4", features = ["trace"] }
-tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 velcro = "0.5.4"
