Added client module stub with integration test
  - Added a client module. This is a stub at present, ready for
    functionality to be added. A corresponding unit test files has also
    been added.

  - Added a full integration test foundation ready for testing the
    client module. This uses test_binary to set up an Axum-based web
    server as an external process, and Reqwest to query it. At present
    this just has a very simple test to ping the server, to ensure that
    the foundation construct works correctly.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,6 +39,7 @@ claims = "0.7.1"
 rand = "0.8.5"
 reqwest = "0.11.24"
 tempfile = "3.10.0"
+test-binary = "3.0.2"
 tokio = { version = "1.36.0", features = ["io-std", "macros", "rt-multi-thread"] }
 tower-http = { version = "0.4.4", features = ["trace"] }
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
