Implemented Drop for Updater, using message queue
  - Added an MPSC queue to the Updater, using flume. This is to provide
    a means of communicating with the background interval timer thread.

  - Implemented Drop for Updater, to simply send a message to the queue.
    Sending the message implies a shutdown is required.

  - Added handling of message queue events to the event-handling loop
    set up in Updater::new(). Receiving any message will exit the loop,
    effectively shutting the timer thread down.

  - Added documentation, but no tests for this functionality at present.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ reasons = []
 [dependencies]
 axum = "0.6.20"
 ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
+flume = { version = "0.11.0", features = ["async"] }
 hex = "0.4.3"
 reqwest = "0.11.24"
 rubedo = "0.4.6"
