--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,11 +24,12 @@ reasons = []
 axum = "0.6.20"
 ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
 hex = "0.4.3"
+reqwest = "0.11.24"
 rubedo = "0.4.6"
 semver = { version = "1.0.21", features = ["serde"] }
 serde_json = "1.0.113"
 sha2 = "0.10.8"
-tokio = { version = "1.36.0", features = ["fs", "io-std", "io-util"] }
+tokio = { version = "1.36.0", features = ["fs", "io-std", "io-util", "macros", "rt-multi-thread"] }
 tokio-util = { version = "0.7.10", features = ["io", "io-util"] }
 tracing = "0.1.40"
 
@@ -37,10 +38,8 @@ assert-json-diff = "2.0.2"
 bytes = "1.5.0"
 claims = "0.7.1"
 rand = "0.8.5"
-reqwest = "0.11.24"
 tempfile = "3.10.0"
 test-binary = "3.0.2"
-tokio = { version = "1.36.0", features = ["io-std", "macros", "rt-multi-thread"] }
 tower-http = { version = "0.4.4", features = ["trace"] }
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 velcro = "0.5.4"
