--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ hex = "0.4.3"
 reqwest = "0.11.24"
 rubedo = "0.4.6"
 semver = { version = "1.0.21", features = ["serde"] }
+serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.113"
 sha2 = "0.10.8"
 tokio = { version = "1.36.0", features = ["fs", "io-std", "io-util", "macros", "rt-multi-thread"] }
@@ -38,9 +39,11 @@ tracing = "0.1.40"
 assert-json-diff = "2.0.2"
 bytes = "1.5.0"
 claims = "0.7.1"
+mockall = "0.12.1"
 rand = "0.8.5"
 tempfile = "3.10.0"
 test-binary = "3.0.2"
 tower-http = { version = "0.4.4", features = ["trace"] }
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 velcro = "0.5.4"
+wiremock = "0.6.0"
