--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,13 +24,15 @@ reasons = []
 axum = "0.6.20"
 ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
 flume = { version = "0.11.0", features = ["async"] }
+futures-util = "0.3.30"
 hex = "0.4.3"
-reqwest = "0.11.24"
+reqwest = { version = "0.11.24", features = ["stream"] }
 rubedo = "0.4.6"
 semver = { version = "1.0.21", features = ["serde"] }
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.113"
 sha2 = "0.10.8"
+tempfile = "3.10.0"
 tokio = { version = "1.36.0", features = ["fs", "io-std", "io-util", "macros", "rt-multi-thread"] }
 tokio-util = { version = "0.7.10", features = ["io", "io-util"] }
 tracing = "0.1.40"
@@ -41,7 +43,6 @@ bytes = "1.5.0"
 claims = "0.7.1"
 mockall = "0.12.1"
 rand = "0.8.5"
-tempfile = "3.10.0"
 test-binary = "3.0.2"
 tower-http = { version = "0.4.4", features = ["trace"] }
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
