Added Updater status tracking
  - Added a Status enum to encapsulate the possible Updater statuses.

  - Added a status property to Updater. The property is behind an
    RwLock, so that it can be modified through the Arc the Updater
    instance lives in, and the RwLock uses parking_lot for improved
    speed and handling.

  - Added a status() function to get the value of the status property,
    and a set_status() function to set it.

  - Updated Updater::new() to initialise the status as Idle, and to
    reset it to Idle after each completed call to check_for_updates().

  - Updated Updater.register_action() to only allow new critical actions
    if there is no restart pending or in progress.

  - Updated Updater.deregister_action() to "restart" the application if
    the critical action count falls to zero. At present this just logs
    the stages until the restart functionality is added. Additionally,
    it cannot update the status directly, and will do so later on by
    issuing a broadcast.

  - Updated Updater.check_for_updates() to only perform checks if there
    is no currently-active update process, and to update the status at
    each new stage. It will only proceed to the Restarting step if there
    are no critical actions active at that point; otherwise it will go
    to a PendingRestart status and it will fall to deregister_action()
    to trigger the restart. At present this just logs the stages.

  - Added tests and documentation.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
 flume = { version = "0.11.0", features = ["async"] }
 futures-util = "0.3.30"
 hex = "0.4.3"
+parking_lot = "0.12.1"
 reqwest = { version = "0.11.24", features = ["stream"] }
 rubedo = "0.4.6"
 semver = { version = "1.0.21", features = ["serde"] }
