--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,9 +42,12 @@ tracing = "0.1.40"
 assert-json-diff = "2.0.2"
 bytes = "1.5.0"
 claims = "0.7.1"
+figment = { version = "0.10.14", features = ["toml", "env"] }
 mockall = "0.12.1"
 rand = "0.8.5"
+smart-default = "0.7.1"
 test-binary = "3.0.2"
+tokio = { version = "1.36.0", features = ["signal"] }
 tower-http = { version = "0.4.4", features = ["trace"] }
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 velcro = "0.5.4"
