--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,7 +31,7 @@ reqwest = { version = "0.11.24", features = ["stream"] }
 rubedo = "0.5.1"
 semver = { version = "1.0.22", features = ["serde"] }
 serde = { version = "1.0.197", features = ["derive"] }
-serde_json = "1.0.114"
+serde_json = { version = "1.0.114", features = ["preserve_order"] }
 sha2 = "0.10.8"
 tempfile = "3.10.1"
 tokio = { version = "1.36.0", features = ["fs", "io-std", "io-util", "macros", "rt-multi-thread"] }
