Adjusted for linting tests
  - Added lint exceptions where appropriate, and dealt with remaining
    lint warnings, to be compatible with `cargo clippy --all-targets`,
    which lints unit and integration tests.

  - Replaced use of the OnceCell crate with the built-in LazyLock.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,7 +46,6 @@ bytes = "1.6.0"
 claims = "0.7.1"
 figment = { version = "0.10.15", features = ["toml", "env"] }
 mockall = "0.12.1"
-once_cell = { version = "1.19.0", features = ["parking_lot"] }
 rand = "0.8.5"
 smart-default = "0.7.1"
 test-binary = "3.0.2"
@@ -117,12 +116,10 @@ dbg_macro                         = "forbid"
 exit                              = "forbid"
 infinite_loop                     = "forbid"
 missing_docs_in_private_items     = "forbid"
-mod_module_files                  = "forbid"
 multiple_inherent_impl            = "forbid"
 panic_in_result_fn                = "forbid"
 str_to_string                     = "forbid"
 string_to_string                  = "forbid"
-tests_outside_test_module         = "forbid"
 unimplemented                     = "forbid"
 ##	Deny
 clone_on_ref_ptr                  = "deny"
@@ -141,11 +138,13 @@ integer_division                  = "deny"
 lossy_float_literal               = "deny"
 mem_forget                        = "deny"
 missing_assert_message            = "deny"
+mod_module_files                  = "deny"
 panic                             = "deny"
 print_stderr                      = "deny"
 print_stdout                      = "deny"
 rc_mutex                          = "deny"
 renamed_function_params           = "deny"
+tests_outside_test_module         = "deny"
 try_err                           = "deny"
 unwrap_in_result                  = "deny"
 unwrap_used                       = "deny"
@@ -174,7 +173,7 @@ rc_buffer                         = "warn"
 redundant_type_annotations        = "warn"
 rest_pat_in_fully_bound_structs   = "warn"
 same_name_method                  = "warn"
-semicolon_outside_block           = "warn"
+semicolon_inside_block            = "warn"
 shadow_reuse                      = "warn"
 shadow_same                       = "warn"
 shadow_unrelated                  = "warn"
