--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,16 @@
 [package]
-name         = "patchify"
-version      = "0.2.0"
-description  = "Support for running applications to automatically update themselves"
-categories   = ["config", "filesystem"]
-keywords     = ["auto-update", "library", "updater"]
-edition      = "2021"
-rust-version = "1.81.0"
-license      = "MIT"
-authors      = ["Dan Williams <dan@dotfive.co.uk>"]
-repository   = "https://github.com/danwilliams/patchify"
-readme       = "README.md"
+name          = "patchify"
+version       = "0.2.0"
+description   = "Support for running applications to automatically update themselves"
+categories    = ["config", "filesystem"]
+keywords      = ["auto-update", "library", "updater"]
+edition       = "2021"
+rust-version  = "1.81.0"
+license       = "MIT"
+authors       = ["Dan Williams <dan@dotfive.co.uk>"]
+documentation = "https://docs.rs/patchify"
+repository    = "https://github.com/danwilliams/patchify"
+readme        = "README.md"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
