--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ serde              = { version = "1.0.210", features = ["derive"] }
 serde_json         = { version = "1.0.128", features = ["preserve_order"] }
 sha2               = "0.10.8"
 tempfile           = "3.12.0"
+thiserror          = "2.0.3"
 tokio              = { version = "1.40.0", features = ["fs", "io-std", "io-util", "macros", "rt-multi-thread"] }
 tokio-util         = { version = "0.7.12", features = ["io", "io-util"] }
 tracing            = "0.1.40"
