--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,6 +47,7 @@ claims             = "0.7.1"
 figment            = { version = "0.10.19", features = ["toml", "env"] }
 mockall            = "0.13.0"
 rand               = "0.8.5"
+sham               = { version = "0.1.1", features = ["std_process"] }
 smart-default      = "0.7.1"
 test-binary        = "3.0.2"
 tokio              = { version = "1.40.0", features = ["signal"] }
