--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,12 +42,12 @@ tracing            = "0.1.40"
 
 [dev-dependencies]
 assert-json-diff   = "2.0.2"
-bytes              = "1.7.1"
+bytes              = "1.8.0"
 claims             = "0.7.1"
 figment            = { version = "0.10.19", features = ["toml", "env"] }
 mockall            = "0.13.0"
 rand               = "0.8.5"
-sham               = { version = "0.1.1", features = ["std_process"] }
+sham               = { version = "0.2.0", features = ["reqwest", "std_process"] }
 smart-default      = "0.7.1"
 test-binary        = "3.0.2"
 tokio              = { version = "1.40.0", features = ["signal"] }
