--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ keywords      = ["auto-update", "library", "updater"]
 edition       = "2024"
 rust-version  = "1.86.0"
 license       = "MIT"
-authors       = ["Dan Williams <dan@dotfive.co.uk>"]
+authors       = ["Dan Williams <dan@pncr.io>"]
 documentation = "https://docs.rs/patchify"
 repository    = "https://github.com/danwilliams/patchify"
 readme        = "README.md"
